--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
 body {
-    background-color: lightcyan
+    background-color: lightgray
+}
+h1 {
+    color:blue
+}
+
+p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
